# metric-forecaster

./: Dockerfile  README.md  docker-compose.yml  docker.env  forecast.ipynb  pyproject.toml  renovate.json
app/: app.py  config.py  db.py  deps.py  main.py  metrics.py
models/: __init__.py  model.py
tests/: app_test.py  conftest.py
