[tool.poetry]
name = "metric-forecaster"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "<2"
cython = "^3.0.11"
prophet = "^1.1.5"
requests = "^2.32.3"
falcon = "^3"
uvicorn = "^0.30.1"
prometheus-client = "^0.20.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
httpx = "^0.27.2"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.5.2"
pymysql = "^1.1.1"
cryptography = "^43.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
